src/App.css
.App {
  text-align: center;

}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  text-decoration: none;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

a {
  text-decoration: none;
}

/* WEATHER STYLING */

.Weather-container {
  text-align: center;
  background-color: #282c34;
  min-height: 100vh;
  color: white;
}

.Weather-header {
  padding: 1em;
  display: flex;
  justify-content: space-between;
  width: 80%;
  margin: auto;
  height: 5em;
}
.Weather-header div {
  display: flex;
  width: 50%;
  justify-content: flex-end;
}
.Weather-header input {
  width: 40%;
  height: 1.5em;
  padding: 0.5em;
  margin: 1.1em;

}
.Weather-container h1 {
  margin: 0.5em 0;
  color: white;
}

input {
  width: 20%;
  padding: 0.5em;
  margin: 0.5em 0.5em;
  font-size: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f4f4f4;
  color: #333;
  transition: border-color 0.3s ease-in-out;
}

.button {
  border: solid white;
  background-color: #282c34;
  height: 1.5em;
  border-radius: 60px;
  border-width: 0.15em;
  padding: 0.6em 1.4em;
  font-size: 1rem;
  color: white;
  text-decoration: none;
  font-weight: 500;
  margin: 1em 0;
  display: inline-block;
  transition: background-color 0.3s ease-in-out;
}

.button:hover {
  cursor: pointer;
  background-color: white;
  color: #282c34;
}




.toggle-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.toggle-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: 0.4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #2196f3;
}

input:checked + .slider:before {
  transform: translateX(26px);
}

